# ieel

./: .gitignore  README.md  compile.sh  config.h.in  memjog.txt  recompile.sh
basics/: Arglist.h  RunsIO.h  Utilities.h
cmake/: compiler_helper.cmake  target_helper.cmake
cmake/Modules/: FindNetCDF.cmake
codes/i-eel/: CMakeLists.txt
codes/i-eel/basics/: CMakeLists.txt
codes/i-eel/cmake/Modules/: FindARMA.cmake  FindPackageHandleStandardArgs.cmake
codes/i-eel/i-eel.xcodeproj/: project.pbxproj
codes/i-eel/i-eel.xcodeproj/project.xcworkspace/xcuserdata/jbec.xcuserdatad/: UserInterfaceState.xcuserstate
codes/i-eel/i-eel.xcodeproj/xcuserdata/jbec.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
codes/i-eel/programs/: CMakeLists.txt  learn2D_cellflow.cpp  learn2D_noflow.cpp  learn2D_reduced.cpp  swim2D_cellflow.cpp  swim2D_learned_cellflow.cpp  test_buckling.cpp  test_buckling2D.cpp  test_swim.cpp  test_swim2D.cpp
codes/i-eel/src/: CMakeLists.txt  Fiber.cpp  Fiber.hpp  Fiber2D.cpp  Fiber2D.hpp  Flow.cpp  Flow.hpp  Flow2D.cpp  Flow2D.hpp  QLearning.cpp  QLearning.hpp
codes/input_data/: Q.csv
codes/matlab/: moviefib.m  moviefib.m~  moviefib2D.m  moviefib2Dcellflow.m  plotres2d.m
env/: pyvenv.cfg
i-eel/: main.cpp
i-eel.xcodeproj/: project.pbxproj
i-eel.xcodeproj/project.xcworkspace/xcuserdata/jbec.xcuserdatad/: UserInterfaceState.xcuserstate
i-eel.xcodeproj/xcuserdata/jbec.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
i-eel.xcodeproj/xcuserdata/jbec.xcuserdatad/xcschemes/: xcschememanagement.plist
ieel2/ieel2.xcodeproj/: project.pbxproj
input_data/: Pi.csv  Q.csv  theta0.csv  v0.csv
notes/: PRL_eel.tex  biblio.bib  compare_traj.eps  description.tex  displ_nostrategy.eps  genetic_learning.eps  preprint_raphael.tex  raphael_modifier.tex  swimming_speed_nofluid.eps  traj_centerofmass.eps  travel_learn_diffreal.eps  travel_naive_diffreal.eps  vel_varU.eps  vitesse_fn_alpha.fig
post_proc/: indep_test.ipynb  policy_gradient.ipynb  utils.py
programs/: CMakeLists.txt  bootstrapping_cellflow.cpp  learn2D_cellflow.cpp  learn2D_reduced.cpp  markovianization.cpp  pg_with_et.cpp  policy_gradient.cpp  semi_differential_sarsa.cpp  snaps.cpp  swim.cpp  swimmer_traj.cpp  test_buckling.cpp  test_swim.cpp  traj_snaps.cpp  utils.cpp  utils.h
pyi/: anim.py  impl_policy.py  playground.ipynb  requirements.txt  run_cellflow_learn2d.py  run_pg.py  test.ipynb  test.py  utils.py
runs/include/channelflow/: utils.h
src/: CMakeLists.txt  Fiber.hpp  Fiber2D.cpp  Fiber2D.hpp  Flow.cpp  Flow.hpp  Flow2D.cpp  Flow2D.hpp  QLearning.cpp  QLearning.hpp  fibers.cpp  fibers.h  main.cpp
